--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="./style.css">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +11,21 @@
     <header>
 
     </header>
-    <p>Holaaaaaa</p>
+    <main>
+    <h1>HTML y Python</h1>
+    <p>HTML5 es la quinta versión del lenguaje de marcado HTML. Introduce nuevas características como etiquetas semánticas, soporte nativo para video y audio mediante las etiquetas, y capacidades mejoradas para gráficos interactivos usando el elemento. Además, facilita la creación de aplicaciones web más ricas y modernas al incluir una mejor integración con APIs y funcionalidades para almacenamiento local sin necesidad de complementos externos como Flash.</p>
+    <p>Python, por otro lado, es un lenguaje de programación de propósito general, conocido por ser fácil de aprender y de usar debido a su sintaxis clara y sencilla. Es extremadamente versátil y se utiliza en una amplia variedad de campos como desarrollo web, análisis de datos, inteligencia artificial, automatización y mucho más. Una de sus características principales es la enorme cantidad de bibliotecas y herramientas disponibles, que permiten a los desarrolladores resolver problemas complejos de manera eficiente.</p>
+
+    <section>
+        <h2>1. HTML</h2>
+        <p>
+            Los encabezados van desde <code>&lt;h1&gt;</code>
+            hasta <code>&lt;h6&gt;</code>
+        </p>
+    </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
