--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             hasta <code>&lt;h6&gt;</code>
         </p>
     </section>
+    <section>
+        <h2>2. Python</h2>
+        <p>
+            Es un lenguaje de alto nivel interpretativo
+        </p>
+        <img height="100px" width="100px" src="./Imagenes/python.png" alt="">
+        
+    </section>
+
     </main>
     <footer>
 
