--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             Es un lenguaje de alto nivel interpretativo
         </p>
         <img height="100px" width="100px" src="./Imagenes/python.png" alt="">
-        
+    </section>
+    <section>
+        <h2>Enlaces</h2>
+        <a href=""></a>
     </section>
 
     </main>
