--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
     </section>
     <section>
         <h2>Enlaces</h2>
-        <a href=""></a>
+        <a href="https://github.com/aiiongc/clase-170325"></a>
+    </section>
+    <section>
+        <h2>Enlace con imagen</h2>
+        <a href="https://github.com/aiiongc/clase-170325">
+            <img src="./Imagenes/OIP.jfif" alt="">
+
+        </a>
     </section>
 
     </main>
