--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
     </section>
     <section>
         <h2>Enlaces</h2>
-        <a href="https://github.com/aiiongc/clase-170325"></a>
+        <a href="www.google.cl">Holaaa</a>
     </section>
     <section>
         <h2>Enlace con imagen</h2>
-        <a href="https://github.com/aiiongc/clase-170325">
+        <a href="www.google.cl">
             <img src="./Imagenes/OIP.jfif" alt="">
 
         </a>
+    <h1></h1>
     </section>
 
     </main>
