--- a/index.html
+++ b/index.html
@@ -1,51 +1,92 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="./style.css">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" href="./Imagenes/html.png">
+    <title>Curriculum</title>
+    <link rel="stylesheet" href="estilos.css">
+    <script src="https://kit.fontawesome.com/ac273efdb6.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <main class="container" >
+        <header class="cabecera">
+            <figure class="container_foto_perfil">
+                <img src="./Multimedia/foto_perfil.webp" width="200" alt="Fotito de perfil">
+            </figure>
+            <section class="nombre_puesto">
+                <h1>
+                    Ignacio Herrera
+                </h1>
+                <h2>
+                    Ing. en Informática 
+                </h2>
+            </section>
 
-    </header>
-    <main>
-    <h1>HTML y Python</h1>
-    <p>HTML5 es la quinta versión del lenguaje de marcado HTML. Introduce nuevas características como etiquetas semánticas, soporte nativo para video y audio mediante las etiquetas, y capacidades mejoradas para gráficos interactivos usando el elemento. Además, facilita la creación de aplicaciones web más ricas y modernas al incluir una mejor integración con APIs y funcionalidades para almacenamiento local sin necesidad de complementos externos como Flash.</p>
-    <p>Python, por otro lado, es un lenguaje de programación de propósito general, conocido por ser fácil de aprender y de usar debido a su sintaxis clara y sencilla. Es extremadamente versátil y se utiliza en una amplia variedad de campos como desarrollo web, análisis de datos, inteligencia artificial, automatización y mucho más. Una de sus características principales es la enorme cantidad de bibliotecas y herramientas disponibles, que permiten a los desarrolladores resolver problemas complejos de manera eficiente.</p>
-
-    <section>
-        <h2>1. HTML</h2>
-        <p>
-            Los encabezados van desde <code>&lt;h1&gt;</code>
-            hasta <code>&lt;h6&gt;</code>
-        </p>
-    </section>
-    <section>
-        <h2>2. Python</h2>
-        <p>
-            Es un lenguaje de alto nivel interpretativo
-        </p>
-        <img height="100px" width="100px" src="./Imagenes/python.png" alt="">
-    </section>
-    <section>
-        <h2>Enlaces</h2>
-        <a href="www.google.cl">Holaaa</a>
-    </section>
-    <section>
-        <h2>Enlace con imagen</h2>
-        <a href="www.google.cl">
-            <img src="./Imagenes/OIP.jfif" alt="">
-
-        </a>
-    <h1></h1>
-    </section>
-
+        </header>
+        <section>
+            <h3>Perfil Profesional</h3>
+            <hr>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates alias architecto culpa quisquam, optio unde consectetur quia corrupti iste tempora molestias similique sapiente facere quos, in, harum incidunt consequatur magnam?</p>
+        </section>
+        <section>
+            <h3><i class="fas fa-cogs"></i>Habilidades</h3>
+            <hr>
+            <ul>
+                <li>Trabajo en equipo</li>
+                <li>Gestión de proyectos</li>
+                <li>Liderazgo</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-language"></i>Idiomas</h3>
+            <hr>
+            <ul>
+                <li>Español</li>
+                <li>Ingles</li>
+                <li>Alemán</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-envelope"></i>Información de Contacto</h3>
+            <hr>
+            <address>
+                <p>Email: correo@ejemplo.com</p>
+                <p>Teléfono: +569 55555555</p>
+                <p>LinkedIn: <a href="#"> Perfil en LinkedIn</a></p>
+            </address>
+        </section>
+        <section>
+            <h3><i class="fas fa-briefcase"></i>Experiencia Laboral</h3>
+            <hr>
+            <article>
+                <h4>Puesto</h4>
+                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+            <article>
+                <h4>Puesto</h4>
+                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
+        
+        <section>
+            <h3><i class="fas fa-graduation-cap"></i>Formación</h3>
+            <hr>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2002-2006)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2007-2008)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
+       
     </main>
-    <footer>
 
-    </footer>
+
 </body>
 </html>
