--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <main class="container" >
         <header class="cabecera">
             <figure class="container_foto_perfil">
-                <img src="./Multimedia/foto_perfil.webp" width="200" alt="Fotito de perfil">
+                <img src="./Multimedia/foto_perfil.jpg" width="200" alt="Fotito de perfil">
             </figure>
             <section class="nombre_puesto">
                 <h1>
-                    Ignacio Herrera
+                    Ignacio Herrera Parra
                 </h1>
                 <h2>
                     Ing. en Informática 
@@ -26,47 +26,53 @@
         <section>
             <h3>Perfil Profesional</h3>
             <hr>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates alias architecto culpa quisquam, optio unde consectetur quia corrupti iste tempora molestias similique sapiente facere quos, in, harum incidunt consequatur magnam?</p>
+            <p>Las competencias por las que destaca mi formación de ingeniero en informático son:
+                <ul>
+                <li>- Implementar soluciones integrales basadas en metodologías de la ingeniería de software y marcos de desarrollos seguro en función a las necesidades del sector productivo.</li>
+                <li>- Liderar proyectos informáticos definidos en la planificación estratégica para dar soluciones tecnológicas de diversa índole, de acuerdo a las metodologías de desarrollo.</li>
+                <li>- Realizar gestión de datos y entrenamiento en sistemas automatizados e inteligencia artificial, considerando distintas plataformas y el estándar de la industria.</li>
+                </ul>
+            </p>
         </section>
         <section>
             <h3><i class="fas fa-cogs"></i>Habilidades</h3>
             <hr>
             <ul>
-                <li>Trabajo en equipo</li>
-                <li>Gestión de proyectos</li>
-                <li>Liderazgo</li>
+                <li>- Resolución de Problemas, innovación y emprendimiento, enfocada a identificar y abordar problemas, oportunidades, para desarrollar soluciones tecnológicas innovadoras y emprendedoras.</li>
+                <li>- Ética y Ciudadanía, enfocada en las implicaciones sociales y ambientales de la toma de decisiones y gestión de proyectos tecnológicos.</li>
+                <li>- Aprendizaje Continuo, enfocado en la actualización continua de los profesionales para responder a la evolución constante de la Industria y de las tecnologías.</li>
+                <li>- Trabajo Colaborativo y Comunicación, enfocado en la colaboración y comunicación efectiva con el equipo interno y los clientes, en diferentes contextos para la gestión de soluciones tecnológicas pertinentes.</li>
             </ul>
         </section>
         <section>
             <h3><i class="fas fa-language"></i>Idiomas</h3>
             <hr>
             <ul>
-                <li>Español</li>
-                <li>Ingles</li>
-                <li>Alemán</li>
+                <li>Español Nativo</li>
+                <li>Ingles intermedio B1</li>
             </ul>
         </section>
         <section>
             <h3><i class="fas fa-envelope"></i>Información de Contacto</h3>
             <hr>
             <address>
-                <p>Email: correo@ejemplo.com</p>
-                <p>Teléfono: +569 55555555</p>
-                <p>LinkedIn: <a href="#"> Perfil en LinkedIn</a></p>
+                <p>Email: ignacio.herrera27@inacapmail.cl</p>
+                <p>Teléfono: +569 97860852</p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/ignacio-enrique-herrera-parra-845667161/"> Perfil en LinkedIn</a></p>
             </address>
         </section>
         <section>
             <h3><i class="fas fa-briefcase"></i>Experiencia Laboral</h3>
             <hr>
             <article>
-                <h4>Puesto</h4>
-                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Atención al cliente</h4>
+                <p><strong>Wofoo</strong> (2023 - 2025)</p>
+                <p>Atención de clientes y operaciones de caja en local Wofoo Concepción</p>
             </article>
             <article>
-                <h4>Puesto</h4>
-                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Ejecutivo financiero</h4>
+                <p><strong>SALESLAND</strong> (2018-2020)</p>
+                <p>Venta de tarjetas, seguros y avances en efectivo para tarjetas de crédito UNICARD / UNIPAY</p>
             </article>
         </section>
         
@@ -74,14 +80,14 @@
             <h3><i class="fas fa-graduation-cap"></i>Formación</h3>
             <hr>
             <article>
-                <h4>Carrera o Diplomado</h4>
-                <p><strong>Nombre de Colegio</strong> (2002-2006)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Ingeniería en informática</h4>
+                <p><strong>INACAP</strong> (2024 - 2027)</p>
+                <p>Estudiante (segundo año) de ingeniería en informática Inacap sede Concepción.</p>
             </article>
             <article>
-                <h4>Carrera o Diplomado</h4>
-                <p><strong>Nombre de Colegio</strong> (2007-2008)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Enseñanza Media</h4>
+                <p><strong>C.E.I.A</strong> (2011-2013)</p>
+                <p>Educación media Completada.</p>
             </article>
         </section>
        
